--- a/src/assets/css/cmps/guest-picker.scss
+++ b/src/assets/css/cmps/guest-picker.scss
@@ -28,11 +28,11 @@
     font-size: 14px;
   }
   
-  .guest-controls {
-    display: flex;
-    align-items: center;
-    gap: 12px;
-  }
+  // .guest-controls {
+  //   display: flex;
+  //   align-items: center;
+  //   gap: 12px;
+  // }
   
   .counter-btn {
     width: 32px;
