--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -31,6 +31,7 @@
 @use "./cmps/main-menu.scss";
 @use "./cmps/side-menu.scss";
 @use "./cmps/booking-confirmation-modal.scss";
+@use "./cmps/GuestRow.scss";
 
 @use "./cmps/label-scroller-bar.scss";
 @use "./cmps/order-card.scss";
