--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -10,6 +10,7 @@
 @use "./pages/stay-details.scss";
 @use "./pages/stay-edit.scss";
 @use "./pages/back-office.scss";
+@use "./pages/BookingConfirmationPage.scss";
 
 /* Components */
 @use "./cmps/upper-filter.scss";
