changed stayPreview and also scss of order-card

--- a/src/assets/css/cmps/order-card.scss
+++ b/src/assets/css/cmps/order-card.scss
@@ -1,6 +1,6 @@
 //filter-dates
 .sticky {
-    width: 300px;
+    width: 328px;
     padding: 24px;
     border-radius: 12px;
     background: white;
@@ -9,6 +9,7 @@
     font-size: 14px;
     position: relative;
     z-index: 1;
+    border: 1px solid rgb(221,221,221);
   }
 
 .price {
