changes in -index.scss

--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -18,7 +18,6 @@
 @use "./cmps/stay-list.scss";
 @use "./cmps/stay-preview.scss";
 @use "./cmps/stay-filter.scss";
-// @use "./cmps/app-header.scss";
 @use "./cmps/app-footer.scss";
 @use "./cmps/middle-filter.scss";
 @use "./cmps/small-filter.scss";
@@ -33,6 +32,7 @@
 @use "./cmps/booking-confirmation-modal.scss";
 @use "./cmps/user-menu.scss";
 @use "./cmps/profile-button.scss";
+@use "./cmps/login-signup.scss";
 
 @use "./cmps/label-scroller-bar.scss";
 @use "./cmps/order-card.scss";
