--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -34,15 +34,13 @@
 @use "./cmps/main-menu.scss";
 @use "./cmps/side-menu.scss";
 @use "./cmps/booking-confirmation-modal.scss";
-
 @use "./cmps/user-menu.scss";
 @use "./cmps/profile-button.scss";
 @use "./cmps/login-signup.scss";
-
 @use "./cmps/GuestRow.scss";
-
 @use "./cmps/label-scroller-bar.scss";
 @use "./cmps/order-card.scss";
+@use "./cmps/footer.scss";
 
 /* Fonts */
 @font-face {
