added 'my stays' page and fixed backoffice styles and content

--- a/src/assets/css/cmps/side-menu.scss
+++ b/src/assets/css/cmps/side-menu.scss
@@ -1,11 +1,13 @@
 .side-menu {
+  display: flex;
+  flex-direction: column;
   width: 220px;
   padding: 24px;
   background-color: #ffffff;
   font-family: sans-serif;
   flex-shrink: 0;
   max-width: 1000px;
-  margin-left: auto;
+  margin-left: 20px;
   margin-right: auto;
 }
 
@@ -59,7 +61,7 @@
   font-weight: 500;
   font-size: 16px;
   display: block;
-  padding: 8px 12px;
+  padding: 8px 0;
   border-radius: 6px;
   transition: background 0.2s ease;
 }
@@ -70,8 +72,8 @@
 }
 
 .side-note {
-  // background: #fff8dc;
   padding: 16px;
+  padding-bottom: 100px;
   border-radius: 8px;
   font-size: 13px;
   line-height: 1.4;
