--- a/src/assets/css/cmps/login-signup.scss
+++ b/src/assets/css/cmps/login-signup.scss
@@ -87,7 +87,7 @@
   font-size: 16px;
   background-color: #ff385c;
   color: white;
-  font-weight: bold;
+  // font-weight: bold;
   border: none;
   border-radius: 8px;
   margin-bottom: 10px;
