--- a/src/assets/css/cmps/main-menu.scss
+++ b/src/assets/css/cmps/main-menu.scss
@@ -14,7 +14,7 @@
     margin: 0;
   }
 
-  .stay-info,
+  .info,
   .img-section,
   .info-item,
   .desc textarea,
@@ -112,8 +112,9 @@
   border: 1px solid #e5e5e5;
 }
 
-.stay-info {
+.info {
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
   font-size: 13px;
   // margin-bottom: 25px;
@@ -167,15 +168,50 @@
 .img-section {
   display: grid;
   grid-template-columns: 2fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: repeat(2, 1fr);
   gap: 8px;
-  width: 100%;
-  height: 100%;
-  max-width: 1000px;
-  height: 500px;
   border-radius: 12px;
   overflow: hidden;
+  max-height: 500px;
   margin-bottom: 30px;
+
+  .grid-img {
+    position: relative;
+    overflow: hidden;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      display: block;
+      transition: transform 0.3s ease;
+    }
+
+    &.img1 {
+      grid-row: 1 / 3;
+      grid-column: 1 / 2;
+    }
+
+    &.img2 {
+      grid-row: 1 / 2;
+      grid-column: 2 / 3;
+    }
+
+    &.img3 {
+      grid-row: 2 / 3;
+      grid-column: 2 / 3;
+    }
+
+    &.img4 {
+      grid-row: 1 / 2;
+      grid-column: 3 / 4;
+    }
+
+    &.img5 {
+      grid-row: 2 / 3;
+      grid-column: 3 / 4;
+    }
+  }
 }
 
 .underline-input {
