--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -41,6 +41,8 @@
 @use "./cmps/label-scroller-bar.scss";
 @use "./cmps/order-card.scss";
 @use "./cmps/footer.scss";
+@use "./cmps/my-stays.scss";
+@use "./cmps/info-item.scss";
 
 /* Fonts */
 @font-face {
