--- a/src/assets/css/cmps/profile-button.scss
+++ b/src/assets/css/cmps/profile-button.scss
@@ -23,10 +23,10 @@
 }
 
 .avatar {
-  width: 32px;
-  height: 32px;
-  border-radius: 50%;
-  object-fit: cover;
+  width: 28px;
+  height: 28px;
+  // border-radius: 50%;
+  // object-fit: cover;
 }
 
 .user-menu-wrapper {
