--- a/src/assets/css/cmps/login-signup.scss
+++ b/src/assets/css/cmps/login-signup.scss
@@ -87,11 +87,15 @@
   font-size: 16px;
   background-color: #ff385c;
   color: white;
-  // font-weight: bold;
   border: none;
   border-radius: 8px;
   margin-bottom: 10px;
+  transition: transform 0.2s ease;
   cursor: pointer;
+
+  &:active {
+    transform: scale(0.9);
+  }
 }
 
 .divider {
