added new add-stay page

--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -42,6 +42,11 @@
 @use "./cmps/footer.scss";
 @use "./cmps/my-stays.scss";
 @use "./cmps/info-item.scss";
+@use "./cmps/stay-wizard.scss";
+@use "./cmps/step-place-type.scss";
+@use "./cmps/step-intro.scss";
+@use "./cmps/add-stay-footer.scss";
+@use "./cmps/option-box.scss";
 
 /* Fonts */
 @font-face {
