addes title to each stay in stayDetails

--- a/src/assets/css/pages/stay-details.scss
+++ b/src/assets/css/pages/stay-details.scss
@@ -350,3 +350,18 @@
     }
   }
 }
+
+.stay-title-container {
+  width: 100%;
+  max-width: 1120px;
+  margin: 0 auto;
+  padding: 0;
+}
+
+.stay-title-details {
+  font-size: 26px;
+  font-weight: 600;
+  color: #222;
+  margin: 0;
+  line-height: 1.3;
+}
