added 3 pages of add-stay. fixed its css and made a reusable cmp for option-box

--- a/src/assets/css/cmps/step-place-type.scss
+++ b/src/assets/css/cmps/step-place-type.scss
@@ -1,5 +1,7 @@
 .step-place-type {
   h2 {
+    width: 50%;
+    margin: 0;
     font-size: 24px;
     margin-bottom: 20px;
   }
@@ -7,14 +9,9 @@
   .place-type-options {
     display: flex;
     flex-direction: column;
-    gap: 12px;
-  }
-
-  .place-type-option {
-    padding: 16px;
-    border: 1px solid #ccc;
+    align-items: center;
+    padding: 0px;
     background: #fff;
-    border-radius: 12px;
     cursor: pointer;
     text-align: left;
 
@@ -23,4 +20,13 @@
       background-color: #f7f7f7;
     }
   }
+}
+
+.option-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  justify-content: center;
+  align-items: center;
+  padding: 22px;
+  gap: 22px;
 }
