--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -47,6 +47,7 @@
 @use "./cmps/step-intro.scss";
 @use "./cmps/add-stay-footer.scss";
 @use "./cmps/option-box.scss";
+@use "./cmps/step-guest-type.scss";
 
 /* Fonts */
 @font-face {
