--- a/src/assets/css/cmps/option-box.scss
+++ b/src/assets/css/cmps/option-box.scss
@@ -1,12 +1,6 @@
-.option-grid {
-  display: flex;
-  justify-content: center;
-  gap: 30px;
-}
-
 .option-box {
-  width: 100%;
-  max-width: 180px;
+  width: 160px;
+  max-width: 200px;
   height: 70px;
   padding: 16px;
   border: 1px solid #ddd;
@@ -14,14 +8,29 @@
   background-color: white;
   cursor: pointer;
   transition: all 0.2s ease;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: flex-start;
 
   &.selected {
     border: 2px solid #222;
     background-color: #f7f7f7;
+  }
+
+  &.wide-btn {
+    width: 600px;
+    max-width: 600px;
+    height: 60px;
+    padding: 16px;
+    border: 1px solid #ddd;
+    border-radius: 12px;
+    background-color: white;
+    &.selected {
+      border: 2px solid #222;
+      background-color: #f7f7f7;
+    }
+  }
+
+  &:active {
+    border: 2px solid #222;
+    transform: scale(0.9);
   }
 
   &:hover {
@@ -30,12 +39,15 @@
 
   .option-icon {
     font-size: 24px;
+    width: 30px;
+    height: 30px;
   }
 
   h4 {
     margin: 12px 0 0;
-    font-size: 16px;
-    font-weight: 600;
+
+    font-size: 18px;
+    font-weight: 700;
   }
 
   p {
