added map section to backoffice

--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -48,6 +48,7 @@
 @use "./cmps/add-stay-footer.scss";
 @use "./cmps/option-box.scss";
 @use "./cmps/step-guest-type.scss";
+@use "./cmps/step-place-location.scss";
 
 /* Fonts */
 @font-face {
