--- a/src/assets/css/cmps/upper-filter.scss
+++ b/src/assets/css/cmps/upper-filter.scss
@@ -1,10 +1,14 @@
 .upper-header {
+  position: sticky;
+  top:0;
   display: flex;
   justify-content: space-between;
   align-items: center;
   height: 7vh;
   width: 100%;
-  margin-top: 20px;
+  margin-top: 0;
+  z-index: 10;
+  background-color: white;
   // background: green;
 
   .logo {
