--- a/src/assets/css/cmps/middle-filter.scss
+++ b/src/assets/css/cmps/middle-filter.scss
@@ -2,9 +2,14 @@
   display: flex;
   justify-content: center;
   background: white;
-  position: sticky;
-  top: 56px;
-  z-index: 10;
+  // position: sticky;
+  // top: 56px;
+  // z-index: 10;
+  &.sticky {
+    position: sticky;
+    top: 56px;
+    z-index: 10;
+  }
 }
 
 .search-box {
