--- a/src/assets/css/cmps/upper-header.scss
+++ b/src/assets/css/cmps/upper-header.scss
@@ -13,9 +13,9 @@
     width: 130px;
     height: auto;
     img {
-      width: 100%; // Makes the image take the full width of the parent (.logo)
-      height: 100%; // Ensures it scales with the parent
-      object-fit: contain; // Keeps aspect ratio inside the box
+      width: 100%;
+      height: 100%; 
+      object-fit: contain; 
     }
   }
 
