--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -36,6 +36,7 @@
 
 @use "./cmps/label-scroller-bar.scss";
 @use "./cmps/order-card.scss";
+@use "./cmps/day-picker.scss";  
 
 /* Fonts */
 @font-face {
