--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -49,6 +49,8 @@
 @use "./cmps/step-guest-type.scss";
 @use "./cmps/option-box.scss";
 @use "./cmps/step-place-location.scss";
+@use "./cmps/step-place-basics.scss";
+@use "./cmps/step-place-offer.scss";
 
 /* Fonts */
 @font-face {
