--- a/src/assets/css/cmps/option-box.scss
+++ b/src/assets/css/cmps/option-box.scss
@@ -1,9 +1,9 @@
 .option-box {
-  width: 160px;
-  max-width: 200px;
+  width: var(--btn-width, 160px); //220
+  max-width: 300px;
   height: 70px;
   padding: 16px;
-  border: 1px solid #ddd;
+  border: var(--btn-border, 1px) solid #ddd;
   border-radius: 12px;
   background-color: white;
   cursor: pointer;
