--- a/src/assets/css/cmps/step-place-location.scss
+++ b/src/assets/css/cmps/step-place-location.scss
@@ -12,8 +12,8 @@
   }
 
   .where {
-    font-size: 40px;
-    font-weight: 500;
+    font-weight: 600;
+    font-size: 1.9rem;
   }
 
   .txt span {
