--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -51,6 +51,7 @@
 @use "./cmps/step-place-location.scss";
 @use "./cmps/step-place-basics.scss";
 @use "./cmps/step-place-offer.scss";
+@use "./cmps/step-place-listing.scss";
 
 /* Fonts */
 @font-face {
