--- a/src/assets/css/cmps/add-stay-footer.scss
+++ b/src/assets/css/cmps/add-stay-footer.scss
@@ -1,11 +1,22 @@
 .add-stay-footer {
-  margin-top: 100px;
-  position: sticky;
+  position: fixed;
   bottom: 0;
+  left: 0;
   width: 100%;
-  z-index: 10;
+  z-index: 1000;
   background-color: white;
+  box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.05);
+  // padding: 12px 24px;
 }
+
+// .add-stay-footer {
+//   margin-top: 100px;
+//   position: sticky;
+//   bottom: 0;
+//   width: 100%;
+//   z-index: 10;
+//   background-color: white;
+// }
 
 .step-indicator {
   display: flex;
