--- a/src/assets/css/cmps/step-guest-type.scss
+++ b/src/assets/css/cmps/step-guest-type.scss
@@ -1,14 +1,23 @@
 .step-guest-type {
-  h2 {
-    width: 50%;
-    margin: 50px auto 20px;
+  margin-top: 60px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  .title {
+    margin-bottom: 10px;
+    font-weight: 600;
+    font-size: 1.9rem;
   }
-  .grid {
+
+  .guest-grid {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     gap: 15px;
+    padding-left: 22px;
   }
+
   &.selected {
     border-color: black;
     background-color: #f7f7f7;
