--- a/src/assets/css/cmps/step-place-type.scss
+++ b/src/assets/css/cmps/step-place-type.scss
@@ -1,16 +1,20 @@
 .step-place-type {
-  h2 {
-    width: 50%;
-    margin: 0;
-    font-size: 24px;
-    margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 60px;
+
+  .title {
+    align-self: flex-start;
+    padding-left: 22px;
+    font-weight: 600;
+    font-size: 1.9rem;
   }
 
   .place-type-options {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    padding: 0px;
+    align-items: flex-start;
     background: #fff;
     cursor: pointer;
     text-align: left;
