--- a/src/assets/css/cmps/upper-filter.scss
+++ b/src/assets/css/cmps/upper-filter.scss
@@ -9,25 +9,13 @@
   margin-top: 0;
   z-index: 10;
   background-color: white;
-  // background: green;
-
-  // .logo {
-  //   padding-top: 1px;
-  //   padding-left: 3vw;
-  //   width: 130px;
-  //   height: auto;
-  //   img {
-  //     width: 100%; // Makes the image take the full width of the parent (.logo)
-  //     height: 100%; // Ensures it scales with the parent
-  //     object-fit: contain; // Keeps aspect ratio inside the box
-  //   }
-  // }
+ 
   .logo {
     a {
-      text-decoration: none; // remove underline from the entire link
+      text-decoration: none; 
       display: flex;
       align-items: center;
-      gap: 6px; // space between icon and text
+      gap: 6px; 
     }
   
     img {
@@ -40,7 +28,7 @@
       font-size: 20px;
       font-weight: 600;
       color: #FF385C;
-      text-decoration: none; // ensures no underline
+      text-decoration: none; 
     }
   }
 
