--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -45,3 +45,17 @@
   font-weight: normal;
   font-style: normal;
 }
+
+// :root {
+//   --rdp-accent-color: black;
+//   --rdp-range-start-date-background-color: black;
+//   --rdp-range-end-date-background-color: black;
+//   --rdp-selected-date-background-color: black;
+
+//   --rdp-range-start-color: white;
+//   --rdp-range-end-color: white;
+//   --rdp-selected-color: white;
+
+//   --rdp-today-color: black;
+//   --rdp-today-background-color: transparent;
+// }
