finished all steps to create new stay. needs to complete the publishing

--- a/src/assets/css/cmps/step-place-listing.scss
+++ b/src/assets/css/cmps/step-place-listing.scss
@@ -1,6 +1,7 @@
 .step-place-listing {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   gap: 10px;
   max-width: 600px;
   margin: auto;
