--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -52,6 +52,7 @@
 @use "./cmps/step-place-basics.scss";
 @use "./cmps/step-place-offer.scss";
 @use "./cmps/step-place-listing.scss";
+@use "./cmps/step-publish.scss";
 
 /* Fonts */
 @font-face {
