--- a/src/assets/css/basics/base.scss
+++ b/src/assets/css/basics/base.scss
@@ -2,4 +2,7 @@ html {
   font-family: "Nunito", sans-serif;
   font-weight: 600;
   letter-spacing: 0.01em;
+  .main-container {
+    padding-bottom: 120px;
+  }
 }
