fixed user menu buttons. now it switch to the right page

--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -9,6 +9,7 @@
 @use "./pages/stay-index.scss";
 @use "./pages/stay-details.scss";
 @use "./pages/stay-edit.scss";
+@use "./pages/reservations.scss";
 @use "./pages/back-office.scss";
 @use "./pages/BookingConfirmationPage.scss";
 
