fixed UpperHeader and footer

--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -15,6 +15,7 @@
 
 /* Components */
 @use "./cmps/upper-filter.scss";
+@use "./cmps/upper-header.scss";
 @use "./cmps/mobile-filter.scss";
 @use "./cmps/avatar.scss";
 @use "./cmps/stay-list.scss";
