finished listin-page issues

--- a/src/assets/css/cmps/step-place-type.scss
+++ b/src/assets/css/cmps/step-place-type.scss
@@ -2,8 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 60px;
-
+  padding: 3rem, 6rem;
+  padding-bottom: 120px;
   .title {
     align-self: flex-start;
     padding-left: 22px;
