--- a/src/assets/css/basics/base.scss
+++ b/src/assets/css/basics/base.scss
@@ -2,7 +2,9 @@ html {
   font-family: "Nunito", sans-serif;
   font-weight: 600;
   letter-spacing: 0.01em;
-  .main-container {
-    padding-bottom: 120px;
-  }
+  margin: 0;
+  padding: 0;
+  height: auto;
+  min-height: 100%;
+  overflow-x: hidden;
 }
