--- a/src/assets/css/cmps/step-guest-type.scss
+++ b/src/assets/css/cmps/step-guest-type.scss
@@ -1,8 +1,12 @@
 .step-guest-type {
+  height: auto;
+  margin-bottom: 120px;
+  // overflow: auto;
   margin-top: 60px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  // padding-bottom: 120px;
 
   .title {
     margin-bottom: 10px;
