--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -52,6 +52,7 @@
 @use "./cmps/option-box.scss";
 @use "./cmps/step-place-location.scss";
 @use "./cmps/day-picker.scss";
+@use "./cmps/user-msg.scss";
 
 @use "./cmps/step-place-basics.scss";
 @use "./cmps/step-place-offer.scss";
