added login menu. still working on adding more users

--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -53,6 +53,7 @@
 @use "./cmps/step-place-location.scss";
 @use "./cmps/day-picker.scss";
 @use "./cmps/user-msg.scss";
+@use "./cmps/login-menu.scss";
 
 @use "./cmps/step-place-basics.scss";
 @use "./cmps/step-place-offer.scss";
