--- a/src/assets/css/cmps/middle-filter.scss
+++ b/src/assets/css/cmps/middle-filter.scss
@@ -17,7 +17,7 @@
   display: flex;
   z-index: 9999 !important;
   position: fixed;
-  top: 50px; 
+  top: 50px;
   left: 0;
   right: 0;
 }
@@ -44,13 +44,36 @@
   flex-direction: column;
   justify-content: center;
   padding: 0 16px;
-  border-right: 1px solid #ddd;
   height: 100%;
   line-height: 1.2;
-}
+  cursor: pointer;
+  transition: all 0.2s ease;
+  position: relative;
+  border-radius: 32px;
 
-.search-box-arg:last-of-type {
-  border-right: none;
+  &::after {
+    content: "";
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    height: 24px;
+    width: 1px;
+    background-color: #ddd;
+    transition: opacity 0.2s ease;
+  }
+
+  &:last-child::after {
+    display: none;
+  }
+
+  &:hover {
+    background-color: #ebebeb;
+
+    &::after {
+      opacity: 0;
+    }
+  }
 }
 
 .search-box-arg strong {
